# cc1-notifier

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: build-artifacts.yml  release.yml
docs/: service.md
helm/cc1-notifier/: Chart.yaml  values.yaml
helm/cc1-notifier/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  secret.yaml
json-messages/: attribute.json  status.json
src/: __init__.py  alert_processor.py  config.py  discord_notifier.py  service.py  websocket_client.py
src/models/: __init__.py  attributes.py  config.py  discord.py  notice.py  status.py
